--- a/client/body.html
+++ b/client/body.html
@@ -1,29 +1,35 @@
 <body>
   <div class="container">
-    <h1 class="center">Sigma Tau DKE's 125th Reunion Celebration</h1>
-    <h3 class="center">May 1st-3rd, 2015</h3>
-    <h3 class="center">403 Memorial Drive, Cambridge, MA 02138</h3>
+    <h1 class="center headline">Sigma Tau DKE's 125th Reunion Celebration</h1>
+    <h2 class="center subhead"><em>May 1st-3rd, 2015</em></h2>
+    <h2 class="center subhead"><em>403 Memorial Drive, Cambridge, MA 02138</em></h2>
 
     <div class="row">
       <div class="col c4 agenda-left center">
-        <h4>Friday, May 1st</h4>
-        <p><strong>7pm-10pm</strong></p>
-        <p>Welcome Reception</p>
+        <div class="daycard">
+          <h4>Friday, May 1st</h4>
+          <p><strong>7pm-10pm</strong></p>
+          <p>Welcome Reception</p>
+        </div>
       </div>
       <div class="col c4 agenda-center center">
-        <h4>Saturday, May 2nd</h4>
-        <p><strong>MAIN EVENT</strong><br />
-        <strong>2pm:</strong> Bar Opens<br />
-        <strong>3pm-5pm:</strong> ASTADKE General Meeting<br />
-        <strong>5pm-6pm:</strong> Cocktail Hour<br />
-        <strong>6pm-7pm:</strong> Dinner Served<br />
-        <strong>7pm-?:</strong> Recognitions, Celebrations, General Merrymaking</p>
-        <p><em>A $50/person donation is requested to help offset costs of Saturday's main event.</em></p>
+        <div class="daycard">
+          <h4>Saturday, May 2nd</h4>
+          <p><strong>MAIN EVENT</strong><br />
+          <strong>2pm:</strong> Bar Opens<br />
+          <strong>3pm-5pm:</strong> ASTADKE General Meeting<br />
+          <strong>5pm-6pm:</strong> Cocktail Hour<br />
+          <strong>6pm-7pm:</strong> Dinner Served<br />
+          <strong>7pm-?:</strong> Recognitions, Celebrations, General Merrymaking</p>
+          <p><em>A $50/person donation is requested to help offset costs of Saturday's main event.</em></p>
+        </div>
       </div>
       <div class="col c4 agenda-right center">
-        <h4>Sunday, May 3rd</h4>
-        <p><strong>10am-12pm</strong></p>
-        <p>Farewell Brunch</p>
+        <div class="daycard">
+          <h4>Sunday, May 3rd</h4>
+          <p><strong>10am-12pm</strong></p>
+          <p>Farewell Brunch</p>
+        </div>
       </div>
     </div>
     {{#if checkAlreadyRSVPd}}
