--- a/client/attendee.html
+++ b/client/attendee.html
@@ -1,5 +1,5 @@
 <template name="attendee">
-  <p>{{firstName}} {{lastName}}, Class of {{classYear}}</p>
+  <p>{{firstName}} {{lastName}}, <em>Class of {{classYear}}</em></p>
   {{#if comments}}
     <p>"{{comments}}"</p>
   {{/if}}
