--- a/client/head.html
+++ b/client/head.html
@@ -1,4 +1,5 @@
 <head>
-  <title>deke-125th</title>
+  <title>Celebrate Sigma Tau's 125th!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico"/>
 </head>
