making card spacing consistent

--- a/client/body.html
+++ b/client/body.html
@@ -1,6 +1,6 @@
 <body>
   <div class="container">
-    <div class="RSVPcard flip">
+    <div class="headcard">
       <h1 class="center headline">Sigma Tau DKE's 125th Reunion Celebration</h1>
       <h2 class="center subhead"><em>May 1st-3rd, 2015</em></h2>
       <h2 class="center subhead"><em>403 Memorial Drive, Cambridge, MA 02138</em></h2>
