--- a/client/iveAlreadyRSVPd.html
+++ b/client/iveAlreadyRSVPd.html
@@ -2,14 +2,26 @@
   <div id="RSVPcardflip" class="RSVPcard flip">
     <fieldset>
       <h3 class="daycard-title">Thank you for RSVPing!</h3>
-      <p class="slim">If you plan on attending the Saturday Main Event and would like to submit the $50/person requested donation via PayPal, you can do so by using the buttion below. You can also make out a check to ASTADKE and mail it to: ASTADKE Alumni Relations, c/o Zach Rose, 80 Fawcett St, #236, Cambridge, MA 02138.</p>
+      <p class="slim">If you plan on attending the Saturday Main Event and would like to purchase your $50/person dinner tickets via PayPal, you can do so by using the dropdown and button below. You can also make out a check to ASTADKE and mail it to: ASTADKE Alumni Relations, c/o Zach Rose, 80 Fawcett St, #236, Cambridge, MA 02138.</p>
+      <h4 class="center slimbot">Purchase Dinner Tickets via Paypal</h4>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="98SK6YPX93WWY">
-        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" style="display: block; margin: 10px auto 0;" name="submit" alt="PayPal - The safer, easier way to pay online!">
+        <input type="hidden" name="hosted_button_id" value="8B8BJXXW7CLNY">
+        <table style="display: table" align="center">
+        <tr><td><input type="hidden" name="on0" value="Ticket Options"></td></tr><tr><td><select name="os0">
+          <option value="1 Ticket">1 Ticket $50.00 USD</option>
+          <option value="2 Tickets">2 Tickets $100.00 USD</option>
+          <option value="3 Tickets">3 Tickets $150.00 USD</option>
+          <option value="4 Tickets">4 Tickets $200.00 USD</option>
+        </select> </td></tr>
+        </table>
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" style="display: block; margin: 10px auto 0;" name="submit" alt="PayPal - The safer, easier way to pay online!">
         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-      </form>
-      <p class="slim">If you need to change your RSVP, please send an email to <a href="mailto:alumni_relations@astadke.org">alumni_relations@astadke.org</a> with a note describing the changes, and the guest list will be updated shortly!</p>
+        </form>
+
+      <p class="slim">If you need to change your RSVP, please send an email to <a href="mailto:alumni_relations@astadke.org" target="_blank">alumni_relations@astadke.org</a> with a note describing the changes, and the guest list will be updated shortly!</p>
+      <p class="slimbot">We look forward to seeing you at the reunion! In the meantime, you can catch up on all the latest chapter news by visiting the ASTADKE website: <a href="http://www.astadke.org" target="_blank">astadke.org</a>.</p>
 
       <p class="right slimbot"><button type="button" class="again btn btn-sm">Return to RSVP form</button></p>
     </fieldset>
