fixing email link to new tab

--- a/client/insertRSVP.html
+++ b/client/insertRSVP.html
@@ -51,7 +51,7 @@
           <div class="col c4">
             <p class="center"><button type="submit" class="RSVPbtn btn btn-b btn-sm">Send my RSVP</button></p>
             <p class="center"><button type="button" class="already btn btn-sm">I've already RSVP'd/<br />I need to buy my tickets</button></p>
-            <p class="center">Questions? Just <a href="mailto:alumni_relations@astadke.org">click here to send us an email</a>!</p>
+            <p class="center">Questions? Just <a href="mailto:alumni_relations@astadke.org" target="_blank">click here to send us an email</a>!</p>
           </div>
         </div>
       </div>
