--- a/client/insertRSVP.html
+++ b/client/insertRSVP.html
@@ -42,9 +42,9 @@
               {{> afFieldInput name='noAttend' template="plain" class="RSVPinputbox"}}
               <p class="RSVPinstr"><em>Instructions:</em></p>
               <ul>
-                <li>Please <strong>include yourself</strong> in total attendee count for each day.</li>
-                <li>If you are not planning on attending certain day, just leave that day's box unchecked.</li>
-                <li>Fields marked with '*' are required. If nothing happens after clicking "Send my RSVP" please be sure all required fileds are completed.</li>
+                <li>Please <strong>include yourself</strong> in the total attendee count for each day.</li>
+                <li>If you are not planning on attending a certain day, just leave that day's box unchecked.</li>
+                <li>Fields marked with '*' are required. If nothing happens after clicking "Send my RSVP" please be sure all required fields are completed.</li>
               </ul>
             </div>
           </div>
