updated from 125th to Fall Alumni Dinner

--- a/client/body.html
+++ b/client/body.html
@@ -1,35 +1,20 @@
 <body>
   <div class="container">
     <div class="headcard">
-      <h1 class="center headline">Sigma Tau DKE's 125th Reunion Celebration</h1>
-      <h2 class="center subhead"><em>May 1st-3rd, 2015</em></h2>
+      <h1 class="center headline">Fall 2015 Alumni Dinner/BBQ</h1>
+      <h2 class="center subhead"><em>October 10th, 2015</em></h2>
       <h2 class="center subhead"><em>403 Memorial Drive, Cambridge, MA 02139</em></h2>
     </div>
     <div class="row">
-      <div class="col c4 agenda-left center">
+      <div class="col c12 agenda-center center">
         <div class="daycard">
-          <h3 class="daycard-title">Friday, May 1st</h3>
-          <p><strong>7pm-10pm</strong></p>
-          <p>Welcome Reception<br />(Open House)</p>
-        </div>
-      </div>
-      <div class="col c4 agenda-center center">
-        <div class="daycard">
-          <h3 class="daycard-title">Saturday, May 2nd</h3>
-          <p><strong>MAIN EVENT</strong><br /><br />
-          <strong>2pm:</strong> Bar Opens<br />
-          <strong>3pm-5pm:</strong> ASTADKE General Meeting<br />
-          <strong>5pm-7pm:</strong> Cocktails and Appetizers<br />
-          <strong>7pm-8pm:</strong> Dinner Served<br />
-          <strong>8pm-?:</strong> Celebration and General Merrymaking</p>
-          <p><em>Note: A $50/person dinner ticket is required to help offset costs of Saturday's main event.</em></p>
-        </div>
-      </div>
-      <div class="col c4 agenda-right center">
-        <div class="daycard">
-          <h3 class="daycard-title">Sunday, May 3rd</h3>
-          <p><strong>10am-12pm</strong></p>
-          <p>Farewell Brunch<br />(Open House)</p>
+          <h2 class="daycard-title">Tentative Agenda</h2>
+          <p>
+          <strong>2pm:</strong>Alumni Arrival, Bar Opens<br /><br />
+            <strong>2:30pm</strong> ASTADKE General Meeting<br /><em>Agenda Topics to include: Update on DKE House and Active Chapter, Capital Improvement Campaign Status, House Renovation Highlights</em><br /><br />
+          <strong>4pm</strong> BBQ Dinner, as prepared by Chef Dan<br /><br />
+          <strong>Dinner is followed by standard DKE antics!</strong></p>
+
         </div>
       </div>
     </div>
@@ -42,38 +27,18 @@
     </div>
     
     <div class="RSVPcard flip">
-      <h3 class="daycard-title">Accomodations</h3>
-      <p>For those looking for a place to stay near the Deke House for the weekend, ASTADKE has reserved a block of hotel rooms at the Hyatt Regency Cambridge.</p>
-      <p class="slimbot">To reserve a room at the discounted block rate, please <a href="https://resweb.passkey.com/go/7e07e2ac" target="_blank">book online through this link</a> or call the Hyatt at (617) 492-1234 and reference the Delta Kappa Epsilon Alumni Reunion. Please book before April 6th, 2015!</p>
-    </div>
-    <div class="RSVPcard flip">
       <h1 class="center headline">The Guest List</h1>
       <div class="row center">
-        <div class="col c3">
-          <h2 class="subhead">Friday</h2>
-          <hr class="list-line"/>
-          {{#each friAttendees}}
-          {{> attendee}}
-          {{/each}}
-        </div>
 
-        <div class="col c3">
-          <h2 class="subhead">Saturday</h2>
+        <div class="col c6">
+          <h2 class="subhead">Attendees</h2>
           <hr class="list-line"/>
           {{#each satAttendees}}
           {{> attendee}}
           {{/each}}
         </div>
 
-        <div class="col c3">
-          <h2 class="subhead">Sunday</h2>
-          <hr class="list-line"/>
-          {{#each sunAttendees}}
-          {{> attendee}}
-          {{/each}}
-        </div>
-
-        <div class="col c3">
+        <div class="col c6">
           <h2 class="subhead">Regrets</h2>
           <hr class="list-line"/>
           {{#each nonAttendees}}
