--- a/client/body.html
+++ b/client/body.html
@@ -11,7 +11,7 @@
           <h2 class="daycard-title">Tentative Agenda</h2>
           <p>
           <strong>2pm:</strong>Alumni Arrival, Bar Opens<br /><br />
-            <strong>2:30pm</strong> ASTADKE General Meeting<br /><em>Agenda Topics to include: Update on DKE House and Active Chapter, Capital Improvement Campaign Status, House Renovation Highlights</em><br /><br />
+            <strong>2:30pm</strong> ASTADKE General Meeting<br /><em>Agenda Topics to include: Update on DKE House and Active Chapter, Capital Improvement Campaign Status, House Renovation Highlights</em><br /><br /><em>Meeting Dial-in Information:</em><br /><em>Toll: 972.995.7777</em><br /><em>Toll Free: 1.877.561.6828</em><br /><em>Participant Passcode: 19844854</em><br /><br />
           <strong>4pm</strong> BBQ Dinner, as prepared by Chef Dan<br /><br />
           <strong>Dinner is followed by standard DKE antics!</strong></p>
 
